--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
+  "scripts": {
+    "start:prod": "node index.js",
+    "start:dev": "nodemon index.js"
+  },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "modules": "^0.4.0",
-    "node": "^22.4.0"
+    "node": "^22.4.0",
+    "pg": "^8.12.0",
+    "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4",
+    "sequelize-cli": "^6.6.2"
   }
 }
