--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start:dev": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "modules": "^0.4.0",
