--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=api_cursos
 DB_USER=postgres
-DB_PASSWORD="#Motocroos94"
+DB_PASSWORD=""
 DB_DIALECT=postgres
